# rag-evaluator

./: Dockerfile  LICENSE  README.md  main.py  pyproject.toml
reports/: rag_evaluation_results_20250801_224455.csv  rag_evaluation_results_20250801_224455.md
src/: __init__.py  constants.py  export.py  pipeline.py  utils.py
src/evaluators/: __init__.py  answer_relevance.py  base.py  clarity.py  completeness.py  conciseness.py  groundedness.py  harmfulness.py
src/llm_client/: __init__.py  base.py  mistral.py  ollama.py
src/models/: models.py  response.py  score_enum.py
